<resources>
    <string name="app_name">Note</string>
    <string name="note">Note</string>

    //edit note fragment
    <string name="title_editnote">Title</string>
    <string name="note_editnote">Note</string>

    //add note fragment
    <string name="addnode_alarm">Alarm</string>
    <string name="insertpicture">Insert Picture</string>

    //Color dialog
    <string name="colordialog_title">Choose Color</string>

    //value date
    <string name="firstitem"></string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="nextwednesday">Next Wednesday</string>
    <string name="other">Other</string>
    //value time
    <string name="time1">09:00</string>
    <string name="time2">13:00</string>
    <string name="time3">17:00</string>
    <string name="time4">20:00</string>
    <string name="time5">Other</string>
    <string name="text_dialog_share">Share with</string>
    <string name="text_share_twitter">Share Twitter</string>
    <string name="text_share_line">Share Line</string>
    <string name="text_share_facebok">Share Book</string>
    <string name="cancel">CANCEL</string>


    <string-array name="spin_date">
        <item>@string/today</item>
        <item>@string/tomorrow</item>
        <item>@string/nextwednesday</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="spin_time">
        <item>@string/time1</item>
        <item>@string/time2</item>
        <item>@string/time3</item>
        <item>@string/time4</item>
        <item>@string/time5</item>
    </string-array>
</resources>
